--- a/Style.css
+++ b/Style.css
@@ -38,17 +38,17 @@ body, ul {
 {
     padding: auto;
 }
-  
+
 .search-container
 {
-  padding: 0 770px;
+  padding: 0 690px;
   padding-right: 10px;
   padding-bottom: 0;
   border-radius: 50%;
 }
 .navbar2 
 {
-  background-color: #d0d0d0; 
+  background-color: #ebebeb; 
   height: 50px; 
 }
 .navbar2 ul {
@@ -61,11 +61,19 @@ body, ul {
   width: 100%;
 
 }
-.btn
+.search-box
+{
+  color: white;
+}
+.navbar2 .btn
 {
     color: bisque;
 }
 .navbar2 button:last-child
 {
   
+}
+.bgimg
+{
+  height: auto;
 }
