--- a/Style.css
+++ b/Style.css
@@ -8,6 +8,15 @@
 body{
     width: 100%;
     height: 100%;
+    margin: 0; 
+    padding: 0;
+    background: #19161c;
+    height: 100vh;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-direction: column;
+    align-content: center;
 }
 .container{
     width: 100%;
@@ -36,39 +45,75 @@ body, ul {
 {
     display: inline-block;
     padding: 15px 20px;
-    position: fixed;
+    
 }
-
+.search-container
+{
+  float: right;
+  padding-right: 400px;
+}
 .logo
 {
     padding: auto;
 }
 
-.search-container 
-{
-  padding: 0 1000px;
-  padding-right: 10px;
-  padding-bottom: 0;
+.box{
+  position: relative;
+}
+
+.input {
+  padding: 10px;
+  width: 50px;
+  height: 50px;
+  background: none;
+  border: 4px solid #ffffff;
   border-radius: 50%;
-  float: right;
-  color: rgb(255, 255, 255);
-  display: flex;
+  box-sizing: border-box;
+  font-family: Comic Sans MS;
+  font-size: 26px;
+  color: #ffffff;
+  outline: none;
+  transition: .5s;
 }
-.searchbar 
-{
-  display: flex;
+.box:hover input{
+  width: 350px;
+  background: #ffffff88;
+  border-radius: 10px;
 }
-.search-box div input
-{
-  color: rgb(0, 0, 0);
-  border-radius: 50%;
-  display: flex;
+.box i{
+  position: absolute;
+  top: 50%;
+  right: 1px;
+  transform: translate(-50%,-50%);
+  font-size: 26px;
+  color: #ffffff;
+  transition: .2s;
 }
-.fa fa-search
-{
-  color: white;
-  display: flex;
+.box:hover i{
+  opacity: 0;
+  z-index: -1;
 }
+
+/* YouTube icon */
+#ytb {
+height: 50px;
+width: 50px;
+text-align: center;
+line-height: 52px;
+border: 2px solid transparent;
+color: #ff1717;
+font-size: 25px;
+transition: 0.3s;
+}
+
+#ytb:hover{
+border-radius: 50%;
+border-color: #ff1717;
+box-shadow: 0 0 10px #ff4040;
+}
+
+
+
 .navbar2 
 {
   background-color: #F2F2F2; 
@@ -118,27 +163,11 @@ body, ul {
   float: right;
   padding-right: 20px;
 }
-.wrapper {
-  overflow: hidden;
-}
-.sliding-background {
-  height: 960px;
-  width: 6000px;
-}
-.sliding-background {
-  background: url("https://5.imimg.com/data5/FF/BS/GLADMIN-4642077/neurology-treatment-services-500x500.png") repeat-x;
-  height: 500px;
-  width: 5076px;
-}
-@keyframes slide {
-  0%{
-    transform: translate3d(0, 0, 0);
-  }
-  100%{
-    transform: translate3d(-1692px, 0, 0);
-  }
-}
+
 .bgimg
 {
   height: auto;
 }
+
+
+
