--- a/Style.css
+++ b/Style.css
@@ -10,8 +10,8 @@ body{
     height: 100%;
     margin: 0; 
     padding: 0;
-    background: #19161c;
-    height: 100vh;
+    background: #ffffff;
+    height: 1000px;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
@@ -38,12 +38,13 @@ body, ul {
 }
 .navbar
 {
-    background-color: #c6ebffd8; /*9155a7*/
+    background-color: #9155a7; /*9155a7*/
     height: 75px; 
-    position: fixed;
+    position: absolute;
     overflow: hidden;
     top: 0; 
     width: 100%; 
+    po
 }
 
 .navbar li
@@ -104,13 +105,12 @@ body, ul {
 
 .navbar2 
 {
-  background-color: #f2f2f2ad; 
+  background-color: #f2f2f2; 
   height: 55px; 
   top: 75px; 
   width: 100%; 
-  position: fixed;
+  position: absolute;
   border-bottom: 5px solid rgb(255, 255, 255);
-  
 }
 .navbar2 ul {
   display: inline-block;
@@ -121,7 +121,6 @@ body, ul {
   outline: none;
   width: 100%;
   overflow: hidden;
-  position: fixed;
   border-bottom: 3px solid transparent;
 
 }
@@ -155,4 +154,233 @@ body, ul {
 .bgimg
 {
   height: auto;
+  top: none;
+  position: initial;
+  overflow: hidden;
+}
+.navbar3
+{
+  background-color: #9155a7; 
+  height: 110px; 
+  top: 72px; 
+  width: 100%; 
+  position: relative;
+  border-top: 5px solid rgb(255, 255, 255);
+  box-shadow: 10px 10px 5px 12px #e6e6e6;
+}
+.navbar3 ul {
+  display: flex;
+  padding-top: 12px;
+  padding-left: 20px;
+  background-color: transparent;
+  border: none;
+  outline: none;
+  width: 100%;
+  position: absolute;
+  border-bottom: 3px solid transparent;
+}
+.navbar3 h2
+{
+  color: white;
+  font-size: 36px;
+  padding-top: 25px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: lighter;
+  text-align: left;
+  margin-left: 55px;
+}
+
+.book_btn
+{ width: 260px;
+  position: absolute;
+  color: rgb(255, 255, 255);
+  background-color: #6d3f7d;
+  border: none;
+  font-size: 18px;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 24px;
+  padding-bottom: 15px;
+  float: right;
+  margin-left: 269px;
+  margin-top: 10px;
+  margin-right: auto;
+  overflow: hidden;
+  transition-duration: 0.4s;
+}
+.book_btn :hover
+{
+  background-color: #0DB26B; 
+  color: rgb(0, 0, 0);
+  
+}
+.docs
+{
+  display: block;
+  color: #F2F2F2;
+  height: 300px; 
+  top: 100px; 
+  width: 100%; 
+  position: relative;
+}
+.docs h2
+{
+  text-align: center;
+  color: #0DB26B;
+  font-size: 48px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 50;
+}
+.medicons
+{
+  position:absolute;
+  display: inline-flex;
+}
+.medicons li
+{
+  position: relative;
+  display: inline-block;
+  margin: 50px;
+  border: #ffffff;
+  border: #000;
+  outline: #000;
+  margin: 61px 140px 134px 173px;
+}
+.medicons .fa-calendar
+{
+  color: #ffffff;
+  position: absolute;
+  margin-left: 32px;
+  margin-top: 28px;
+}
+.calender
+{
+  background-color: #0DB26B;
+  height: 100px;
+  width: 100px;
+  border: 5px solid 0DB26B;
+  border-radius: 100%;
+}
+.calender h3
+{
+  color: #0DB26B;
+  position: absolute;
+  margin-top: 132px;
+  font-family: Arial, Helvetica, sans-serif;
+  text-align: center;
+  margin-left: -47px ;
+  font-size: 32px;
+  font-weight: lighter;
+}
+.calender p{
+    color: #8b8888;
+    position: absolute;
+    margin-top: 222px;
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+    margin-left: -114px;
+    font-size: 18px;
+    font-weight: lighter;
+    width: 335px;
+}
+
+.medicons .fa-hospital-o
+{
+  color: #ffffff;
+  position: absolute;
+  margin-left: 35px;
+  margin-top: 29px;
+}
+.hospital
+{
+  background-color: #0DB26B;
+  height: 100px;
+  width: 100px;
+  border: 5px solid 0DB26B;
+  border-radius: 100%;
+}
+.hospital h3
+{
+  color: #0DB26B;
+  position: absolute;
+  margin-top: 132px;
+  font-family: Arial, Helvetica, sans-serif;
+  text-align: center;
+  margin-left: -45px;
+  width: 200px;
+  font-size: 32px;
+  font-weight: lighter;
+}
+.hospital p{
+  color: #8b8888;
+  position: absolute;
+  margin-top: 222px;
+  font-family: Arial, Helvetica, sans-serif;
+  text-align: center;
+  margin-left: -114px;
+  font-size: 18px;
+  font-weight: lighter;
+  width: 335px;
+}
+.medicons .fa-user-md
+{
+  color: #ffffff;
+  position: absolute;
+  margin-left: 36px;
+  margin-top: 28px;
+}
+.usermd
+{
+  background-color: #0DB26B;
+  height: 100px;
+  width: 100px;
+  border: 5px solid 0DB26B;
+  border-radius: 100%;
+}
+.usermd h3
+{
+  color: #0DB26B;
+  position: absolute;
+  margin-top: 132px;
+  font-family: Arial, Helvetica, sans-serif;
+  text-align: center;
+  margin-left: -47px ;
+  width: 200px;
+  font-size: 32px;
+  font-weight: lighter;
+}
+.usermd p{
+  color: #8b8888;
+  position: absolute;
+  margin-top: 222px;
+  font-family: Arial, Helvetica, sans-serif;
+  text-align: center;
+  margin-left: -114px;
+  font-size: 18px;
+  font-weight: lighter;
+  width: 335px;
+}
+.footer
+{
+  background-color: #6DCCA3; 
+  height: 110px; 
+  top: 280px; 
+  width: 100%; 
+  position: relative;
+  border-top: 5px solid rgb(255, 255, 255);
+}
+.footer ul
+{
+  color: white;
+  font-size: 10px;
+  padding-top: 25px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: lighter;
+  text-align: left;
+  margin-left: 55px;
+}
+.footer li
+{
+  display: inline-block;
+  margin: 20px 20px 20px 20px;
 }
